--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
     <version>5.2.0</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-junit4 -->
+<dependency>
+    <groupId>io.qameta.allure</groupId>
+    <artifactId>allure-junit4</artifactId>
+    <version>2.18.1</version>
+    <scope>test</scope>
+</dependency>
 
 
 
